fix response of logout to application/json
